Fix mobile compatibility
Fixes on small screen/mobile:
- remove white bar on right
- remove image overlap
- center images

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
   margin: 0;
   font-family: Georgia, Times, 'Times New Roman', serif;
+  overflow-x: hidden;
 }
